deposit popup - fix icon alignment

--- a/src/components/WalletDepositPopup/DepositSelection/styles.module.scss
+++ b/src/components/WalletDepositPopup/DepositSelection/styles.module.scss
@@ -39,7 +39,8 @@
   .iconWrapper {
     display: flex;
     margin: 0 auto;
-    width: 19px;
+    width: 23px;
+    justify-content: center;
   }
 
   svg.arrowRight {
